# flow.record

./: .git-blame-ignore-revs  .gitignore  COPYRIGHT  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: compatibility.yml  dissect-ci.yml
examples/: filesystem.py  passivedns.py  records.json  selectors.py  tcpconn.py
flow/record/: __init__.py  base.py  context.py  exceptions.py  jsonpacker.py  packer.py  selector.py  stream.py  utils.py  whitelist.py
flow/record/adapter/: __init__.py  archive.py  arrow.py  avro.py  broker.py  csvfile.py  duckdb.py  elastic.py  gcs.py  jsonfile.py  line.py  mongo.py  parquet.py  split.py  splunk.py  sqlite.py  stream.py  text.py  xlsx.py
flow/record/fieldtypes/: __init__.py  credential.py
flow/record/fieldtypes/net/: __init__.py  ip.py  ipv4.py  udp.py
flow/record/tools/: geoip.py  multi-timestamp.py  multi_timestamp.py  rdump.py
tests/: _utils.py  conftest.py  selector_explain_example.py  standalone_test.py  test_adapter_line.py  test_adapter_text.py  test_avro.py  test_avro_adapter.py  test_compiled_selector.py  test_csv_adapter.py  test_deprecations.py  test_elastic_adapter.py  test_fieldtype_ip.py  test_fieldtypes.py  test_gcs_adapter.py  test_json_packer.py  test_json_record_adapter.py  test_multi_timestamp.py  test_packer.py  test_rdump.py  test_record.py  test_record_adapter.py  test_record_descriptor.py  test_regression.py  test_regressions.py  test_selector.py  test_splunk_adapter.py  test_sqlite_adapter.py  test_sqlite_duckdb_adapter.py  test_utils.py  test_xlsx_adapter.py  utils_inspect.py
tests/_data/: iris_zstd.parquet
tests/_docs/: conf.py
tests/adapter/: test_arrow.py  test_avro.py  test_elastic.py  test_json.py  test_jsonfile.py  test_line.py  test_parquet.py  test_splunk.py  test_sqlite_duckdb.py  test_xlsx.py
tests/adapters/: test_csv.py  test_sqlite_duckdb.py
tests/docs/: conf.py
tests/fieldtypes/: test_boolean.py  test_digest.py  test_fieldtypes.py  test_ip.py
tests/packer/: test_json_packer.py  test_packer.py
tests/record/: test_adapter.py  test_context.py  test_descriptor.py  test_multi_timestamp.py  test_record.py
tests/selector/: test_selectors.py
tests/selectors/: test_compiled.py
tests/tools/: test_rdump.py
