[build-system]
requires = ["setuptools>=80.9.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flow.record"
description = "A library for defining and creating structured data (called records) that can be streamed to disk or piped to other tools that use flow.record"
readme = "README.md"
requires-python = ">=3.9.0"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "COPYRIGHT"]
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Utilities",
]
dependencies = [
    "msgpack>=0.5.2",
    "tzdata; platform_system=='Windows'",
]
dynamic = ["version"]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/flow.record"
repository = "https://github.com/fox-it/flow.record"

[project.optional-dependencies]
# Note: these compression libraries do not work well with pypy
compression = [
    "lz4",
    "zstandard",
    "zstandard==0.23.0; platform_python_implementation == 'PyPy' and python_version == '3.9'", # Pin to last working for PyPy3.9
]
elastic = [
    "elasticsearch",
]
geoip = [
    "maxminddb",
]
avro = [
    "cramjam<2.8.4; platform_python_implementation == 'PyPy' and python_version == '3.9'", # Pin to last working for PyPy3.9
    "fastavro[snappy]",
]
duckdb = [
    "duckdb",
    "pytz", # duckdb requires pytz for timezone support
]
splunk = [
    "httpx",
]
xlsx = [
    "openpyxl",
]
full = [
    "flow.record[compression]",
    "tqdm",
    "structlog",
]

[project.scripts]
rdump = "flow.record.tools.rdump:main"
rgeoip = "flow.record.tools.geoip:main"

[tool.ruff]
line-length = 120
required-version = ">=0.9.0"
extend-exclude = ["flow/record/version.py"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "YTT",
  "ANN",
  "B",
  "C4",
  "DTZ",
  "T10",
  "FA",
  "ISC",
  "G",
  "INP",
  "PIE",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "PTH",
  "PLC",
  "TRY",
  "FLY",
  "PERF",
  "FURB",
  "RUF",
]
ignore = ["E203", "B904", "UP024", "ANN002", "ANN003", "ANN204", "ANN401", "SIM105", "TRY003", "TRY400"]

[tool.ruff.lint.per-file-ignores]
"tests/_docs/**" = ["INP001"]

[tool.ruff.lint.isort]
known-first-party = ["flow.record"]

[tool.setuptools.packages.find]
include = ["flow.*"]

[tool.setuptools_scm]
version_file = "flow/record/version.py"

# This list is duplicated due to https://github.com/fox-it/flow.record/pull/182#discussion_r2284582481
[dependency-groups]
compression = [
    "lz4",
    "zstandard==0.23.0; platform_python_implementation == 'PyPy' and python_version == '3.9'", # Pin to last working for PyPy3.9
    "zstandard",
]
elastic = [
    "elasticsearch",
]
geoip = [
    "maxminddb",
]
avro = [
    "cramjam<2.8.4; platform_python_implementation == 'PyPy' and python_version == '3.9'", # Pin to last working for PyPy3.9
    "fastavro[snappy]",
]
duckdb = [
    "duckdb; platform_python_implementation != 'PyPy'", # Don't install duckdb on PyPy
    "pytz; platform_python_implementation != 'PyPy'", # Don't install duckdb on PyPy
]
splunk = [
    "httpx",
]
xlsx = [
    "openpyxl",
]
test = [
    {include-group = "compression"},
    {include-group = "avro"},
    {include-group = "elastic"},
    {include-group = "xlsx"},
    {include-group = "duckdb"},
    "tqdm",
    "structlog",
    "pytest",
]
full = [
    {include-group = "compression"},
    "tqdm",
    "structlog",
]
build = [
    "build",
]
lint = [
    "ruff==0.12.9",
    "vermin",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
]
