[metadata]
author = Dissect Team
author_email = dissect@fox-it.com
url = https://github.com/fox-it/flow.record
license = Affero General Public License v3
description = A library for defining and creating structured data (called records) that can be streamed to disk or piped to other tools that use flow.record
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, COPYRIGHT
classifiers =
  Programming Language :: Python :: 3
